[package]
name = "benten-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and content-addressed hashing for the Benten graph engine."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness. Every bench in this crate uses
# criterion (`harness = false`), but the default library bench target still
# advertises libtest's harness to `cargo bench`, which then rejects Criterion
# CLI flags like `--measurement-time` with `Unrecognized option`. Opting the
# library out of the implicit bench target fixes `cargo bench --workspace`.
bench = false

[features]
# `phase_2b_landed` gates compilation of Phase 2b R3-followup red-phase test
# files whose `use` statements reference R5-pending APIs (notably the migrated
# `benten_core::Subgraph` + `SubgraphBuilder` post-G12-C, plus the post-G12-D
# widened `SubgraphSpec.primitives` shape). Default OFF so the CI required-check
# fleet (which does NOT enable this feature) compiles + runs cleanly during
# R3-consolidation. R5 G12-C / G12-D briefs flip this on as the referenced
# surfaces land. See `.addl/phase-2b/r3-consolidation.md` §4 + qa-r4-02 / qa-r4-03.
phase_2b_landed = []

[dependencies]
benten-errors = { workspace = true }
blake3 = { workspace = true, features = ["pure"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
spin = { workspace = true }
thiserror = { workspace = true }

# Dev-deps target-gated off wasm32-*: `proptest` pulls `rusty-fork` →
# `wait-timeout`, which has no wasi backend and fails to compile for
# `wasm32-wasip1`. The T6 determinism workflow builds the
# `print_canonical_cid` example for `wasm32-wasip1` and inherits the
# dev-deps; without this gate the wasm build fails on a transitive dep
# the example doesn't use. Native tests / benches are unaffected —
# `cfg(not(target_family = "wasm"))` is true there.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
# Cross-process determinism test uses std.
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
# Phase 2a G1-A (arch-r1-7): `benten-core` MUST NOT depend on `benten-eval`
# in any dep section — the `tests/benten_core_no_eval_dep.rs` gate rejects
# even dev-dependencies to enforce the arch-1 dep-break. The R3-consolidation
# scaffolding previously added `benten-eval = { path = "../benten-eval" }`
# here so `tests/subgraph_deterministic_dagcbor.rs` could import Subgraph /
# SubgraphBuilder before the type-move from `benten-eval` to `benten-core`.
# That dev-dep has been removed; the dependent test file stays uncommitted
# at R3 state and is gated behind the Phase-2b benten-core-migration landing
# the type move (see `.addl/phase-2b/00-scope-outline.md` §7a "benten-core
# Subgraph migration"; originally tagged `G5-A` but G5-A actually shipped
# the storage-layer Inv-13 matrix instead).

[[bench]]
name = "hash_only"
harness = false

[[bench]]
name = "cid_parse"
harness = false
