[package]
name = "benten-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and content-addressed hashing for the Benten graph engine."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness. Every bench in this crate uses
# criterion (`harness = false`), but the default library bench target still
# advertises libtest's harness to `cargo bench`, which then rejects Criterion
# CLI flags like `--measurement-time` with `Unrecognized option`. Opting the
# library out of the implicit bench target fixes `cargo bench --workspace`.
bench = false

[features]
# `phase_2b_landed` gates compilation of Phase 2b R3-followup red-phase test
# files that import R5-pending APIs. G12-C lands the `Subgraph` + `SubgraphBuilder`
# core-side surface partially (see `crates/benten-core/src/lib.rs` Subgraph
# docstring re. deferred full-type relocation); the gate stays in place for
# the canonical-bytes-shape-match + no-residual-eval-Subgraph + sec-r6 carry
# tests that wait on the deferred follow-on. G12-D will use the same gate
# for the `SubgraphSpec.primitives` widened-shape tests. Default OFF so the
# CI required-check fleet (which does NOT enable this feature) compiles +
# runs cleanly. See `.addl/phase-2b/r3-consolidation.md` §4 + qa-r4-02 / qa-r4-03.
phase_2b_landed = []

[dependencies]
benten-errors = { workspace = true }
blake3 = { workspace = true, features = ["pure"] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
spin = { workspace = true }
thiserror = { workspace = true }

# Dev-deps target-gated off wasm32-*: `proptest` pulls `rusty-fork` →
# `wait-timeout`, which has no wasi backend and fails to compile for
# `wasm32-wasip1`. The T6 determinism workflow builds the
# `print_canonical_cid` example for `wasm32-wasip1` and inherits the
# dev-deps; without this gate the wasm build fails on a transitive dep
# the example doesn't use. Native tests / benches are unaffected —
# `cfg(not(target_family = "wasm"))` is true there.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
# Cross-process determinism test uses std.
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
# arch-1 invariant: `benten-core` MUST NOT depend on `benten-eval` in any
# dep section. The `tests/benten_core_no_eval_dep.rs` gate enforces this
# (rejects even dev-dependencies). G12-C's core-side `Subgraph` +
# `SubgraphBuilder` are self-contained so the round-trip / deterministic-
# field tests compile against the core surface alone — no `benten-eval`
# dev-dep is needed.

[[bench]]
name = "hash_only"
harness = false

[[bench]]
name = "cid_parse"
harness = false
