[package]
name = "benten-crypto-suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The ONE thin Benten-owned signature/hash/cipher-suite-agility integration crate — a codepoint-dispatched seam wrapping vetted upstream RustCrypto primitives. v1-beta signature default = hybrid Ed25519⊕ML-DSA-65 (NF-4 concatenated/committing/strip-resistant; both must verify); classical-only Ed25519 = non-default downgrade; typed unsupported-algorithm arm (never silent fallback); no hardcoded sizes (a v1-PRODUCTION-correctness property). The ONLY crypto-primitive call site per crypto-agility-contract:6."

[lints]
workspace = true

# G-CORE-2 (#1300) — the integration crate is the ONE crypto-primitive
# call site. We wrap vetted upstream RustCrypto crates; we NEVER fork or
# reimplement primitives. The deps here are the workspace's only direct
# crypto-primitive imports — every other crate calls our typed API
# (or imports primitives via this crate's re-export module).
[dependencies]
# v1-beta DEFAULT classical half of the hybrid signature (NF-4): Ed25519
# via vetted upstream RustCrypto `ed25519-dalek`. Workspace-pinned at
# version 2 with `default-features = false` + `std` + `rand_core` +
# `zeroize` features. Re-exported via [`primitives::ed25519_dalek`] so
# in-flight callers can route through us without breaking source
# compatibility (per the "ONLY call site" rule — direct deps on
# `ed25519-dalek` live HERE; consumers import through us).
ed25519-dalek = { workspace = true }

# DISAGREE-WITH-EVIDENCE (clause-(c)) record — surface to Ben per
# `feedback_surface_arch_decisions_under_auth.md`:
#
# The brief specifies "G-CORE-2 ships *both* primitives + the hybrid
# combiner as the default arm" — adding `ml-dsa = "0.1"` would
# implement that. **BUT** the 2026-05-19 stable releases of `pkcs8
# 0.11.0` + `ed25519 3.0.0` (both published TODAY) created an
# ecosystem fork: `ml-dsa 0.1.0` requires `pkcs8 ^0.11` which now
# resolves to 0.11.0 stable; iroh-base 0.98.0 hard-`=`-pins
# `ed25519-dalek 3.0.0-pre.6` which requires `ed25519 3.0.0-rc.4`
# which requires `pkcs8 = "0.11.0-rc.10"` exactly. The two
# constraints are unsatisfiable. ed25519-dalek 3.0.0-pre.7 (which
# uses ed25519 ^3 + pkcs8 ^0.11 stable) is the fix, BUT iroh-base
# `=`-pins pre.6 so cargo cannot select pre.7 without a `[patch]`,
# and the only available pre.7 source is git (CLAUDE.md baked-in #5
# forbids untrusted-source crypto primitives).
#
# **Decision (taken AS BEN per the night-shift stance):** ship the
# canary with the FULL structural surface — codepoint dispatch +
# hybrid-construction wire-format + commitment-binding spec +
# typed-unsupported arm + classical-only live downgrade + every TF-2
# size / codepoint / typed-unsupported / classical-arm pin GREEN —
# but typed-reject the hybrid arm with the same
# `UnsupportedAlgorithm::Signature` envelope the unknown-codepoint
# arm uses, naming the iroh-base upstream constraint as the
# unblock dependency. The 6 TF-2 hybrid-only pins are
# `#[ignore = "..."]`-staged with the clear unblock destination
# named in the ignore reason (a `#1304`-shaped tracking item that
# the orchestrator opens at PR review). G-CORE-3 #1301 + the
# coordinated workspace bump (iroh-base → stable-pkcs8 ed25519-dalek)
# light the live ml-dsa together.
#
# The safety invariant is preserved by construction: the hybrid arm
# returns `UnsupportedAlgorithm::Signature { codepoint: 0x0001 }` —
# there is NO silent fallback path; callers attempting hybrid
# verification get a typed-rejected error, not a silent classical
# accept. Until the iroh upstream lands, peers must explicitly
# select the classical-only codepoint to interoperate.
#
# This DOES widen the C2 exit criterion's actual deliverable
# (C2 says "signature hybrid co-verify exists") — surfaced to Ben
# as the FORK to ratify at PR review (continue as-is + open the
# coordinated-bump tracker, or block-the-PR + first land an
# iroh-upstream-driven fix). Per the night-shift bias-to-continue,
# the PR opens with the surface ratification surfaced explicitly.

# NF-1 PQ⊕PQ end-state non-default arm (ML-DSA-65 ⊕ SLH-DSA): the
# codepoint is reserved-but-unimplemented in this wave (the dispatch
# typed-rejects it; G-CORE-3c will add the dep + light the live arm
# as part of the full swap matrix). `slh-dsa 0.2.0-rc.5` requires
# `sha2 ^0.11` which conflicts with the workspace's current `sha2 ^0.10`
# from `iroh-base`/etc.; resolving that conflict is G-CORE-3c's scope
# (likely a deliberate workspace sha2 bump alongside the slh-dsa arm).
# Until then the reserved codepoint surfaces `UnsupportedAlgorithm::Signature`
# — additive-codepoint discipline preserved (no wire-break on later add).

# Hash seam (CLAUDE.md baked-in #5; hash is PQ-UNAFFECTED — Grover
# quadratic-only). v1 default = BLAKE3 (multihash 0x1e); pre-blessed
# agile fallbacks = SHA-512/256 (multihash 0x1015) + SHA3-256
# (multihash 0x16).
blake3 = { workspace = true }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Encryption-side primitives (G-CORE-3 #1301) are reserved-but-NOT-
# instantiated at this wave — the codepoint dispatch typed-rejects them
# (additive-codepoint discipline). G-CORE-3 adds `x25519-dalek` +
# `ml-kem` + `chacha20poly1305` + `hkdf` as direct deps of THIS crate
# when it lights up the live cipher-suite impl (still the ONLY call site
# per crypto-agility-contract:6 — the deps move to here at G-CORE-3
# alongside the live combiner). Pulling them into this wave triggered a
# `pkcs8 0.11.0-rc.10 → 0.11.0` lockfile re-resolution that broke
# iroh's `ed25519 3.0.0-rc.4` (which is pinned by iroh-base
# `=ed25519-dalek 3.0.0-pre.6`) — DEFER to G-CORE-3 which can do the
# coordinated workspace dep bump.

# Standard supporting deps.
serde = { workspace = true, features = ["derive", "alloc"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }

# G-CORE-2 (#1300) version-pin: hold `ed25519` at the last RC (rc.4)
# that the `iroh-base 0.98.0` → `=ed25519-dalek 3.0.0-pre.6` chain was
# written against. The 2026-05-19 `ed25519 3.0.0` stable release
# changed the `pkcs8.rs` API surface (`Error::KeyMalformed` enum
# variant removed in pkcs8 0.11.0 stable) which breaks ed25519-dalek
# pre.6's `pkcs8::DecodePrivateKey` impl. Pin removes when iroh-base
# ships a stable-pkcs8/ed25519-3.0.0-compatible ed25519-dalek (the
# follow-on workspace bump tracking item: this pin is the closure
# marker — remove when CI passes without it).
ed25519 = { version = "=3.0.0-rc.4", default-features = false }

# `tempfile` + `redb` are used by the `sizes` module's
# `RedbSigHandle` for the TF-2 surface-3 size-touching pin. NOT
# crypto primitives — `redb` is the workspace-standard durable KV
# (Phase-1 baked-in) and `tempfile` is the standard scratch-dir
# crate used across the workspace.
tempfile = { workspace = true }
redb = { workspace = true }
