[package]
name = "benten-crypto-suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The ONE thin Benten-owned signature/hash/cipher-suite-agility integration crate — a codepoint-dispatched seam wrapping vetted upstream RustCrypto primitives. v1-beta signature default = hybrid Ed25519⊕ML-DSA-65 (NF-4 concatenated/committing/strip-resistant; both must verify); classical-only Ed25519 = non-default downgrade; typed unsupported-algorithm arm (never silent fallback); no hardcoded sizes (a v1-PRODUCTION-correctness property). The ONLY crypto-primitive call site per crypto-agility-contract:6."

[lints]
workspace = true

# G-CORE-2 (#1300) — the integration crate is the ONE crypto-primitive
# call site. We wrap vetted upstream RustCrypto crates; we NEVER fork or
# reimplement primitives. The deps here are the workspace's only direct
# crypto-primitive imports — every other crate calls our typed API
# (or imports primitives via this crate's re-export module).
[dependencies]
# v1-beta DEFAULT classical half of the hybrid signature (NF-4): Ed25519
# via vetted upstream RustCrypto `ed25519-dalek`. Workspace-pinned at
# version 2 with `default-features = false` + `std` + `rand_core` +
# `zeroize` features. Re-exported via [`primitives::ed25519_dalek`] so
# in-flight callers can route through us without breaking source
# compatibility (per the "ONLY call site" rule — direct deps on
# `ed25519-dalek` live HERE; consumers import through us).
ed25519-dalek = { workspace = true }

# v1-beta DEFAULT PQ half of the hybrid signature (NF-4): ML-DSA-65
# (FIPS-204 Category-3) via vetted upstream RustCrypto `ml-dsa`. Direct
# dep lives HERE (the ONLY crypto-primitive call site per
# `crypto-agility-contract:6`). Pinned `^0.1` per
# `.addl/pq-research/landscape-crate-reverify-2026-05-19.md`.
#
# CLOSED-WITH-EVIDENCE (was DISAGREE-WITH-EVIDENCE at G-CORE-2 canary):
# the G-CORE-2 ecosystem fork (iroh-base 0.98.0's `=`-pin on
# `ed25519-dalek 3.0.0-pre.6` blocking `ml-dsa 0.1.0`'s `pkcs8 ^0.11`
# stable requirement) was resolved 2026-05-19 by the Ben-ratified
# (option (c-ii)) iroh 0.98 → 1.0.0-rc.0 bump (G-CORE-2-FP-1). The
# 1.0.0-rc.0 line picks up `ed25519-dalek 3.0.0-pre.7` (uses
# `ed25519 3.0.0` + `pkcs8 0.11.0` stable) — directly compatible
# with `ml-dsa 0.1`. The deferred-live hybrid arm in `sig.rs` is now
# wired through the real `ml_dsa::SigningKey::<MlDsa65>` /
# `VerifyingKey::<MlDsa65>` paths; the previous synthesizer is
# removed. See `.addl/phase-4-meta/iroh-pin-investigation-2026-05-19.md`
# for the 2-LOC migration confirmation. Features: `alloc` (Vec /
# Box / String — needed for the size-touching surfaces) + `rand_core`
# (key generation via `Generate::generate_from_rng` /
# `try_generate_from_rng`) + `getrandom` (lets us call
# `SigningKey::<MlDsa65>::generate()` which routes through `SysRng`
# without needing the workspace's rand_core 0.6 OsRng — ml-dsa
# expects rand_core 0.10's `CryptoRng`, so going via `getrandom`
# sidesteps the version-skew). `pkcs8` feature NOT enabled — the
# Benten wire format uses raw `Encoded` bytes (`encode()` /
# `decode()`) NOT PKCS#8 envelopes.
ml-dsa = { version = "0.1", default-features = false, features = ["alloc", "rand_core", "getrandom"] }

# NF-1 PQ⊕PQ end-state non-default arm (ML-DSA-65 ⊕ SLH-DSA): the
# codepoint is reserved-but-unimplemented in this wave (the dispatch
# typed-rejects it; G-CORE-3c will add the dep + light the live arm
# as part of the full swap matrix). `slh-dsa 0.2.0-rc.5` requires
# `sha2 ^0.11` which conflicts with the workspace's current `sha2 ^0.10`
# from `iroh-base`/etc.; resolving that conflict is G-CORE-3c's scope
# (likely a deliberate workspace sha2 bump alongside the slh-dsa arm).
# Until then the reserved codepoint surfaces `UnsupportedAlgorithm::Signature`
# — additive-codepoint discipline preserved (no wire-break on later add).

# Hash seam (CLAUDE.md baked-in #5; hash is PQ-UNAFFECTED — Grover
# quadratic-only). v1 default = BLAKE3 (multihash 0x1e); pre-blessed
# agile fallbacks = SHA-512/256 (multihash 0x1015) + SHA3-256
# (multihash 0x16).
blake3 = { workspace = true }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Encryption-side primitives (G-CORE-3 #1301) are reserved-but-NOT-
# instantiated at this wave — the codepoint dispatch typed-rejects them
# (additive-codepoint discipline). G-CORE-3 adds `x25519-dalek` +
# `ml-kem` + `chacha20poly1305` + `hkdf` as direct deps of THIS crate
# when it lights up the live cipher-suite impl (still the ONLY call site
# per crypto-agility-contract:6 — the deps move to here at G-CORE-3
# alongside the live combiner). The G-CORE-2 ecosystem fork that
# previously blocked these deps is closed by the iroh 1.0.0-rc.0 bump.

# Standard supporting deps.
serde = { workspace = true, features = ["derive", "alloc"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand_core = { workspace = true }

# G-CORE-2-FP-1 (2026-05-19) — the provisional `ed25519 = "=3.0.0-rc.4"`
# pin (G-CORE-2 closure-marker for the iroh-base 0.98.0 fork) is
# REMOVED. The iroh 0.98 → 1.0.0-rc.0 bump in `benten-engine` +
# `benten-sync` lets cargo select `ed25519-dalek 3.0.0-pre.7` →
# `ed25519 3.0.0` stable → `pkcs8 0.11.0` stable. No further pin
# needed; transitive resolution unifies on the stable chain.

# `tempfile` + `redb` are used by the `sizes` module's
# `RedbSigHandle` for the TF-2 surface-3 size-touching pin. NOT
# crypto primitives — `redb` is the workspace-standard durable KV
# (Phase-1 baked-in) and `tempfile` is the standard scratch-dir
# crate used across the workspace.
tempfile = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
# benten-id pulled as a dev-dep so the `discharge::Issue835Discharge`
# `compile_fail` doctest in lib can name `benten_id::did::Did` at
# doctest-compile time — the test verifies that
# `Did::from_string_unchecked` is genuinely unreachable from outside
# `benten-id` (pim-18 SHAPE-not-SUBSTANCE substitution for the
# previous hardcoded-sentinel discharge marker). Compile-time
# witness, NOT a runtime sentinel.
benten-id = { path = "../benten-id" }
